--- a/config/sync/core.entity_form_display.paragraph.vih_teacher_class_description.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.vih_teacher_class_description.default.yml
@@ -13,8 +13,26 @@ dependencies:
     - paragraphs.paragraphs_type.vih_teacher_class_description
   module:
     - entity_browser
+    - field_group
     - text
     - workbench_moderation
+third_party_settings:
+  field_group:
+    group_appearance:
+      children:
+        - field_background_color
+        - field_background_image
+      parent_name: ''
+      weight: 4
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        formatter: closed
+        description: ''
+        required_fields: true
+      label: Udseende
+      region: content
 id: paragraph.vih_teacher_class_description.default
 targetEntityType: paragraph
 bundle: vih_teacher_class_description
@@ -40,7 +58,7 @@ content:
     third_party_settings: {  }
     region: content
   field_description:
-    weight: 4
+    weight: 3
     settings:
       rows: 5
       placeholder: ''
@@ -48,7 +66,7 @@ content:
     type: text_textarea
     region: content
   field_heading:
-    weight: 0
+    weight: 1
     settings:
       size: 60
       placeholder: ''
@@ -56,7 +74,7 @@ content:
     type: string_textfield
     region: content
   field_paragraph_user:
-    weight: 5
+    weight: 2
     settings:
       match_operator: CONTAINS
       size: 60
@@ -66,7 +84,7 @@ content:
     region: content
   field_photo:
     type: entity_browser_file
-    weight: 3
+    weight: 0
     settings:
       entity_browser: image_browser
       field_widget_edit: true
