--- a/config/sync/taxonomy.vocabulary.vih_class.yml
+++ b/config/sync/taxonomy.vocabulary.vih_class.yml
@@ -2,7 +2,7 @@ uuid: 1cfb9e6d-ee45-4373-a4ac-561006c3b2d9
 langcode: zxx
 status: true
 dependencies: {  }
-name: Class
+name: Fag
 vid: vih_class
 description: ''
 hierarchy: 0
