--- a/config/sync/core.entity_form_display.node.page.default.yml
+++ b/config/sync/core.entity_form_display.node.page.default.yml
@@ -3,7 +3,7 @@ langcode: da
 status: true
 dependencies:
   config:
-    - entity_browser.browser.image_browser
+    - entity_browser.browser.media_browser
     - field.field.node.page.body
     - field.field.node.page.field_banner
     - field.field.node.page.field_meta_tags
@@ -26,7 +26,6 @@ third_party_settings:
   field_group:
     group_banner:
       children:
-        - field_page_main_image
         - title
         - field_banner
       parent_name: ''
@@ -107,13 +106,13 @@ content:
     type: entity_browser_file
     weight: 29
     settings:
-      entity_browser: image_browser
-      field_widget_edit: true
+      entity_browser: media_browser
       field_widget_remove: true
-      view_mode: default
-      preview_image_style: thumbnail
       open: true
       selection_mode: selection_append
+      preview_image_style: thumbnail
+      field_widget_edit: true
+      view_mode: default
     region: content
     third_party_settings: {  }
   field_meta_tags:
