--- a/config/sync/core.entity_form_display.paragraph.1_column_action_centered.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.1_column_action_centered.default.yml
@@ -11,37 +11,49 @@ dependencies:
     - image.style.thumbnail
     - paragraphs.paragraphs_type.1_column_action_centered
   module:
+    - field_group
     - image
     - link
     - text
     - workbench_moderation
+third_party_settings:
+  field_group:
+    group_appearance:
+      children:
+        - field_background_color
+        - field_background_image
+      parent_name: ''
+      weight: 4
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        formatter: closed
+        description: ''
+        required_fields: true
+      label: Udseende
+      region: content
 id: paragraph.1_column_action_centered.default
 targetEntityType: paragraph
 bundle: 1_column_action_centered
 mode: default
 content:
-  created:
-    type: datetime_timestamp
-    weight: 4
-    region: content
-    settings: {  }
-    third_party_settings: {  }
   field_background_color:
-    weight: 6
+    weight: 3
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_background_image:
     type: image_image
-    weight: 7
+    weight: 4
     settings:
       preview_image_style: thumbnail
       progress_indicator: throbber
     third_party_settings: {  }
     region: content
   field_description:
-    weight: 1
+    weight: 2
     settings:
       rows: 5
       placeholder: ''
@@ -49,7 +61,7 @@ content:
     type: text_textarea
     region: content
   field_heading:
-    weight: 5
+    weight: 0
     settings:
       size: 60
       placeholder: ''
@@ -57,7 +69,7 @@ content:
     type: string_textfield
     region: content
   field_link:
-    weight: 0
+    weight: 1
     settings:
       placeholder_url: ''
       placeholder_title: ''
@@ -71,13 +83,6 @@ content:
     settings:
       display_label: true
     third_party_settings: {  }
-  uid:
-    type: entity_reference_autocomplete
-    weight: 2
-    region: content
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-hidden: {  }
+hidden:
+  created: true
+  uid: true
