--- a/config/sync/core.entity_form_display.taxonomy_term.vih_class.default.yml
+++ b/config/sync/core.entity_form_display.taxonomy_term.vih_class.default.yml
@@ -4,19 +4,90 @@ status: true
 dependencies:
   config:
     - entity_browser.browser.image_browser
-    - field.field.taxonomy_term.vih_class.field_class_package_paragraph
+    - field.field.taxonomy_term.vih_class.field_banner
+    - field.field.taxonomy_term.vih_class.field_heading
+    - field.field.taxonomy_term.vih_class.field_paragraphs
+    - field.field.taxonomy_term.vih_class.field_subheading
     - field.field.taxonomy_term.vih_class.field_vih_class_class_packages
     - field.field.taxonomy_term.vih_class.field_vih_class_color
     - field.field.taxonomy_term.vih_class.field_vih_class_image
     - field.field.taxonomy_term.vih_class.field_vih_class_material_price
     - field.field.taxonomy_term.vih_class.field_vih_class_price_addition
-    - field.field.taxonomy_term.vih_class.field_vih_teacher_class_descr
     - taxonomy.vocabulary.vih_class
   module:
     - entity_browser
+    - field_group
     - paragraphs
     - path
     - text
+third_party_settings:
+  field_group:
+    group_content:
+      children:
+        - field_heading
+        - field_subheading
+        - field_paragraphs
+      parent_name: ''
+      weight: 4
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        formatter: open
+        description: ''
+        required_fields: true
+      label: Indhold
+      region: content
+    group_banner:
+      children:
+        - field_banner
+      parent_name: ''
+      weight: 2
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        formatter: closed
+        description: ''
+        required_fields: true
+      label: Banner
+      region: content
+    group_class_details:
+      children:
+        - field_vih_class_image
+        - name
+        - description
+        - field_vih_class_color
+        - field_vih_class_material_price
+        - field_vih_class_price_addition
+        - field_vih_class_class_packages
+      parent_name: ''
+      weight: 3
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        formatter: closed
+        description: ''
+        required_fields: true
+      label: 'Fag detaljer'
+      region: content
+    group_misc:
+      children:
+        - langcode
+        - translation
+        - path
+      parent_name: ''
+      weight: 5
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        formatter: closed
+        description: ''
+        required_fields: true
+      label: Andet
+      region: content
 id: taxonomy_term.vih_class.default
 targetEntityType: taxonomy_term
 bundle: vih_class
@@ -24,26 +95,57 @@ mode: default
 content:
   description:
     type: text_textarea
-    weight: 0
+    weight: 6
     settings:
       placeholder: ''
       rows: 5
     third_party_settings: {  }
     region: content
-  field_class_package_paragraph:
-    weight: 39
+  field_banner:
+    type: entity_browser_file
+    weight: 14
+    settings:
+      entity_browser: image_browser
+      field_widget_edit: true
+      field_widget_remove: true
+      view_mode: default
+      preview_image_style: thumbnail
+      open: true
+      selection_mode: selection_append
+    region: content
+    third_party_settings: {  }
+  field_heading:
+    weight: 15
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
+  field_paragraphs:
+    type: paragraphs
+    weight: 17
     settings:
       title: Paragraph
       title_plural: Paragraphs
-      edit_mode: open
-      add_mode: dropdown
+      edit_mode: closed
+      closed_mode: summary
+      autocollapse: all
+      add_mode: modal
       form_display_mode: default
-      default_paragraph_type: _none
+      default_paragraph_type: 1_column_action_centered
     third_party_settings: {  }
-    type: entity_reference_paragraphs
+    region: content
+  field_subheading:
+    weight: 16
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
     region: content
   field_vih_class_class_packages:
-    weight: 32
+    weight: 10
     settings:
       match_operator: CONTAINS
       size: 60
@@ -52,14 +154,14 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_vih_class_color:
-    weight: 37
+    weight: 7
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_vih_class_image:
     type: entity_browser_file
-    weight: 35
+    weight: 4
     settings:
       entity_browser: image_browser
       field_widget_edit: true
@@ -71,41 +173,29 @@ content:
     third_party_settings: {  }
     region: content
   field_vih_class_material_price:
-    weight: 33
+    weight: 8
     settings:
       placeholder: ''
     third_party_settings: {  }
     type: number
     region: content
   field_vih_class_price_addition:
-    weight: 31
+    weight: 9
     settings:
       placeholder: ''
     third_party_settings: {  }
     type: number
     region: content
-  field_vih_teacher_class_descr:
-    type: entity_reference_paragraphs
-    weight: 38
-    settings:
-      title: Paragraph
-      title_plural: Paragraphs
-      edit_mode: open
-      add_mode: dropdown
-      form_display_mode: default
-      default_paragraph_type: ''
-    third_party_settings: {  }
-    region: content
   langcode:
     type: language_select
-    weight: 2
+    weight: 0
     settings:
       include_locked: true
     third_party_settings: {  }
     region: content
   name:
     type: string_textfield
-    weight: -5
+    weight: 5
     settings:
       size: 60
       placeholder: ''
@@ -113,11 +203,13 @@ content:
     region: content
   path:
     type: path
-    weight: 30
+    weight: 2
+    region: content
     settings: {  }
     third_party_settings: {  }
-    region: content
   translation:
-    weight: 10
+    weight: 1
     region: content
+    settings: {  }
+    third_party_settings: {  }
 hidden: {  }
