--- a/config/sync/core.entity_form_display.user.user.default.yml
+++ b/config/sync/core.entity_form_display.user.user.default.yml
@@ -3,7 +3,11 @@ langcode: da
 status: true
 dependencies:
   config:
+    - entity_browser.browser.image_browser
+    - field.field.user.user.field_banner
     - field.field.user.user.field_e_mail
+    - field.field.user.user.field_job_title
+    - field.field.user.user.field_paragraphs
     - field.field.user.user.field_user_birthday
     - field.field.user.user.field_user_kvalifikationer
     - field.field.user.user.field_user_name_first
@@ -15,35 +19,143 @@ dependencies:
     - image.style.thumbnail
   module:
     - datetime
+    - entity_browser
+    - field_group
     - image
+    - paragraphs
     - text
     - user
+third_party_settings:
+  field_group:
+    group_user:
+      children:
+        - field_vih_user_photo
+        - field_job_title
+        - field_user_name_first
+        - field_user_name_last
+        - field_user_birthday
+        - field_vih_user_descr
+        - field_vih_user_phone
+        - field_e_mail
+        - field_user_kvalifikationer
+      parent_name: ''
+      weight: 1
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        formatter: closed
+        description: ''
+        required_fields: true
+      label: Bruger
+      region: content
+    group_content:
+      children:
+        - field_paragraphs
+      parent_name: ''
+      weight: 2
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        formatter: open
+        description: ''
+        required_fields: true
+      label: Indhold
+      region: content
+    group_banner:
+      children:
+        - field_vih_user_title
+        - field_banner
+      parent_name: ''
+      weight: 0
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        formatter: closed
+        description: ''
+        required_fields: true
+      label: Banner
+      region: content
+    group_other:
+      children:
+        - account
+        - contact
+        - langcode
+        - language
+      parent_name: ''
+      weight: 3
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        formatter: closed
+        description: ''
+        required_fields: true
+      label: Andet
+      region: content
 id: user.user.default
 targetEntityType: user
 bundle: user
 mode: default
 content:
   account:
-    weight: 8
+    weight: 4
     region: content
     settings: {  }
     third_party_settings: {  }
   contact:
-    weight: 9
+    weight: 5
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_banner:
+    type: entity_browser_file
+    weight: 3
+    settings:
+      entity_browser: image_browser
+      field_widget_edit: true
+      field_widget_remove: true
+      view_mode: default
+      preview_image_style: thumbnail
+      open: true
+      selection_mode: selection_append
+    region: content
+    third_party_settings: {  }
   field_e_mail:
     type: email_default
-    weight: 7
+    weight: 8
     region: content
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+  field_job_title:
+    weight: 2
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
+  field_paragraphs:
+    type: paragraphs
+    weight: 10
+    settings:
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: closed
+      closed_mode: summary
+      autocollapse: all
+      add_mode: modal
+      form_display_mode: default
+      default_paragraph_type: 1_column_action_centered
+    third_party_settings: {  }
+    region: content
   field_user_birthday:
     type: datetime_default
-    weight: 4
+    weight: 5
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -57,7 +169,7 @@ content:
     region: content
   field_user_name_first:
     type: string_textfield
-    weight: 2
+    weight: 3
     region: content
     settings:
       size: 60
@@ -65,7 +177,7 @@ content:
     third_party_settings: {  }
   field_user_name_last:
     type: string_textfield
-    weight: 3
+    weight: 4
     region: content
     settings:
       size: 60
@@ -73,7 +185,7 @@ content:
     third_party_settings: {  }
   field_vih_user_descr:
     type: text_textarea
-    weight: 5
+    weight: 6
     region: content
     settings:
       rows: 5
@@ -81,7 +193,7 @@ content:
     third_party_settings: {  }
   field_vih_user_phone:
     type: string_textfield
-    weight: 6
+    weight: 7
     region: content
     settings:
       size: 60
@@ -89,7 +201,7 @@ content:
     third_party_settings: {  }
   field_vih_user_photo:
     type: image_image
-    weight: 0
+    weight: 1
     settings:
       preview_image_style: thumbnail
       progress_indicator: throbber
@@ -97,7 +209,7 @@ content:
     third_party_settings: {  }
   field_vih_user_title:
     type: string_textfield
-    weight: 1
+    weight: 2
     region: content
     settings:
       size: 60
@@ -105,13 +217,13 @@ content:
     third_party_settings: {  }
   langcode:
     type: language_select
-    weight: 11
+    weight: 6
     region: content
     settings:
       include_locked: true
     third_party_settings: {  }
   language:
-    weight: 12
+    weight: 7
     region: content
     settings: {  }
     third_party_settings: {  }
