--- a/config/sync/core.entity_view_display.taxonomy_term.vih_class.vih_class_table_teaser.yml
+++ b/config/sync/core.entity_view_display.taxonomy_term.vih_class.vih_class_table_teaser.yml
@@ -4,13 +4,15 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.taxonomy_term.vih_class_table_teaser
-    - field.field.taxonomy_term.vih_class.field_class_package_paragraph
+    - field.field.taxonomy_term.vih_class.field_banner
+    - field.field.taxonomy_term.vih_class.field_heading
+    - field.field.taxonomy_term.vih_class.field_paragraphs
+    - field.field.taxonomy_term.vih_class.field_subheading
     - field.field.taxonomy_term.vih_class.field_vih_class_class_packages
     - field.field.taxonomy_term.vih_class.field_vih_class_color
     - field.field.taxonomy_term.vih_class.field_vih_class_image
     - field.field.taxonomy_term.vih_class.field_vih_class_material_price
     - field.field.taxonomy_term.vih_class.field_vih_class_price_addition
-    - field.field.taxonomy_term.vih_class.field_vih_teacher_class_descr
     - image.style.vih_class_teaser
     - taxonomy.vocabulary.vih_class
   module:
@@ -39,10 +41,12 @@ content:
     third_party_settings: {  }
     region: content
 hidden:
-  field_class_package_paragraph: true
+  field_banner: true
+  field_heading: true
+  field_paragraphs: true
+  field_subheading: true
   field_vih_class_class_packages: true
   field_vih_class_color: true
   field_vih_class_material_price: true
   field_vih_class_price_addition: true
-  field_vih_teacher_class_descr: true
   langcode: true
