--- a/config/sync/core.entity_view_display.taxonomy_term.vih_class_package.teaser.yml
+++ b/config/sync/core.entity_view_display.taxonomy_term.vih_class_package.teaser.yml
@@ -4,13 +4,12 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.taxonomy_term.teaser
-    - field.field.taxonomy_term.vih_class_package.field_class_package_paragraph
     - field.field.taxonomy_term.vih_class_package.field_link_taxo
+    - field.field.taxonomy_term.vih_class_package.field_paragraphs
     - field.field.taxonomy_term.vih_class_package.field_vih_class_package_color
     - field.field.taxonomy_term.vih_class_package.field_vih_cp_description
     - field.field.taxonomy_term.vih_class_package.field_vih_cp_image
     - field.field.taxonomy_term.vih_class_package.field_vih_cp_subtitle
-    - field.field.taxonomy_term.vih_class_package.field_vih_show_on_frontpage
     - image.style.class_packages_frontpage
     - taxonomy.vocabulary.vih_class_package
   module:
@@ -54,8 +53,7 @@ content:
     third_party_settings: {  }
 hidden:
   description: true
-  field_class_package_paragraph: true
   field_link_taxo: true
+  field_paragraphs: true
   field_vih_cp_description: true
-  field_vih_show_on_frontpage: true
   langcode: true
