--- a/config/sync/core.entity_view_display.taxonomy_term.vih_class_package.vih_class_package_accordion.yml
+++ b/config/sync/core.entity_view_display.taxonomy_term.vih_class_package.vih_class_package_accordion.yml
@@ -4,13 +4,12 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.taxonomy_term.vih_class_package_accordion
-    - field.field.taxonomy_term.vih_class_package.field_class_package_paragraph
     - field.field.taxonomy_term.vih_class_package.field_link_taxo
+    - field.field.taxonomy_term.vih_class_package.field_paragraphs
     - field.field.taxonomy_term.vih_class_package.field_vih_class_package_color
     - field.field.taxonomy_term.vih_class_package.field_vih_cp_description
     - field.field.taxonomy_term.vih_class_package.field_vih_cp_image
     - field.field.taxonomy_term.vih_class_package.field_vih_cp_subtitle
-    - field.field.taxonomy_term.vih_class_package.field_vih_show_on_frontpage
     - image.style.vih_class_package_accordion
     - taxonomy.vocabulary.vih_class_package
   module:
@@ -39,10 +38,9 @@ content:
     third_party_settings: {  }
     region: content
 hidden:
-  field_class_package_paragraph: true
   field_link_taxo: true
+  field_paragraphs: true
   field_vih_class_package_color: true
   field_vih_cp_description: true
   field_vih_cp_subtitle: true
-  field_vih_show_on_frontpage: true
   langcode: true
