--- a/config/sync/core.entity_view_display.user.user.default.yml
+++ b/config/sync/core.entity_view_display.user.user.default.yml
@@ -3,7 +3,10 @@ langcode: da
 status: true
 dependencies:
   config:
+    - field.field.user.user.field_banner
     - field.field.user.user.field_e_mail
+    - field.field.user.user.field_job_title
+    - field.field.user.user.field_paragraphs
     - field.field.user.user.field_user_birthday
     - field.field.user.user.field_user_kvalifikationer
     - field.field.user.user.field_user_name_first
@@ -15,6 +18,7 @@ dependencies:
     - image.style.vih_person_teaser
   module:
     - datetime
+    - entity_reference_revisions
     - image
     - panelizer
     - text
@@ -30,6 +34,15 @@ targetEntityType: user
 bundle: user
 mode: default
 content:
+  field_banner:
+    weight: 10
+    label: above
+    settings:
+      image_style: ''
+      image_link: ''
+    third_party_settings: {  }
+    type: image
+    region: content
   field_e_mail:
     type: email_mailto
     weight: 6
@@ -37,6 +50,23 @@ content:
     label: above
     settings: {  }
     third_party_settings: {  }
+  field_job_title:
+    weight: 11
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
+  field_paragraphs:
+    type: entity_reference_revisions_entity_view
+    weight: 9
+    label: hidden
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
+    region: content
   field_user_birthday:
     type: datetime_default
     weight: 7
