--- a/config/sync/field.field.taxonomy_term.vih_class_package.field_paragraphs.yml
+++ b/config/sync/field.field.taxonomy_term.vih_class_package.field_paragraphs.yml
@@ -1,27 +1,30 @@
-uuid: a5089bcd-d273-4428-b79a-6b1ee50ced36
+uuid: 00ea5598-ce8e-4aaf-9363-674a8d86b33c
 langcode: da
 status: true
 dependencies:
   config:
-    - field.storage.taxonomy_term.field_class_package_paragraph
+    - field.storage.taxonomy_term.field_paragraphs
     - paragraphs.paragraphs_type.1_column_action_centered
+    - paragraphs.paragraphs_type.class_packages
     - paragraphs.paragraphs_type.event_list
     - paragraphs.paragraphs_type.file
     - paragraphs.paragraphs_type.list_of_news_teasers
     - paragraphs.paragraphs_type.long_course_list_
-    - paragraphs.paragraphs_type.news_list
     - paragraphs.paragraphs_type.short_course_list_
+    - paragraphs.paragraphs_type.user_quote
     - paragraphs.paragraphs_type.video
     - paragraphs.paragraphs_type.vih_class_groups_accordion
+    - paragraphs.paragraphs_type.vih_single_class_group
     - paragraphs.paragraphs_type.vih_teacher_class_description
+    - paragraphs.paragraphs_type.vih_webform
     - taxonomy.vocabulary.vih_class_package
   module:
     - entity_reference_revisions
-id: taxonomy_term.vih_class_package.field_class_package_paragraph
-field_name: field_class_package_paragraph
+id: taxonomy_term.vih_class_package.field_paragraphs
+field_name: field_paragraphs
 entity_type: taxonomy_term
 bundle: vih_class_package
-label: class_package_paragraph
+label: Sektioner
 description: ''
 required: false
 translatable: true
@@ -33,89 +36,86 @@ settings:
     negate: 0
     target_bundles:
       1_column_action_centered: 1_column_action_centered
+      class_packages: class_packages
       event_list: event_list
+      file: file
       list_of_news_teasers: list_of_news_teasers
       long_course_list_: long_course_list_
-      file: file
-      news_list: news_list
       short_course_list_: short_course_list_
+      user_quote: user_quote
       video: video
-      vih_teacher_class_description: vih_teacher_class_description
       vih_class_groups_accordion: vih_class_groups_accordion
+      vih_single_class_group: vih_single_class_group
+      vih_teacher_class_description: vih_teacher_class_description
+      vih_webform: vih_webform
     target_bundles_drag_drop:
       1_column_action_centered:
         enabled: true
-        weight: 17
+        weight: 24
       class_packages:
-        weight: 18
-        enabled: false
+        enabled: true
+        weight: 25
       event_list:
         enabled: true
-        weight: 19
-      list_of_news_teasers:
-        enabled: true
-        weight: 20
-      long_course_list_:
-        enabled: true
-        weight: 21
+        weight: 26
       file:
         enabled: true
-        weight: 21
-      news_list:
+        weight: 27
+      list_of_news_teasers:
         enabled: true
-        weight: 22
+        weight: 28
+      long_course_list_:
+        enabled: true
+        weight: 29
+      news_list:
+        weight: 30
+        enabled: false
       page_content:
-        weight: 23
+        weight: 31
         enabled: false
       short_course_list_:
         enabled: true
-        weight: 24
-      video:
-        enabled: true
-        weight: 25
-      vih_course_slot:
-        weight: 26
-        enabled: false
-      vih_option:
-        weight: 27
-        enabled: false
-      class:
-        weight: 27
-        enabled: false
-      class_package:
-        weight: 28
-        enabled: false
-      vih_option_group:
-        weight: 28
-        enabled: false
-      class_package_accordion:
-        weight: 29
-        enabled: false
-      vih_ordered_course_period:
-        weight: 29
-        enabled: false
-      vih_ordered_course_slot:
-        weight: 30
-        enabled: false
-      vih_ordered_option:
-        weight: 31
-        enabled: false
-      vih_teacher_class_description:
-        enabled: true
         weight: 32
       user_quote:
-        weight: 38
-        enabled: false
+        enabled: true
+        weight: 33
+      video:
+        enabled: true
+        weight: 34
       vih_class_groups_accordion:
         enabled: true
-        weight: 40
+        weight: 35
+      vih_course_slot:
+        weight: 36
+        enabled: false
+      vih_option:
+        weight: 37
+        enabled: false
+      vih_option_group:
+        weight: 38
+        enabled: false
+      vih_ordered_course_period:
+        weight: 39
+        enabled: false
       vih_ordered_course_person:
-        weight: 45
+        weight: 40
+        enabled: false
+      vih_ordered_course_slot:
+        weight: 41
         enabled: false
       vih_ordered_event_person:
-        weight: 47
+        weight: 42
+        enabled: false
+      vih_ordered_option:
+        weight: 43
         enabled: false
       vih_single_class_group:
-        weight: 49
-        enabled: false
+        enabled: true
+        weight: 44
+      vih_teacher_class_description:
+        enabled: true
+        weight: 45
+      vih_webform:
+        enabled: true
+        weight: 46
 field_type: entity_reference_revisions
