--- a/config/sync/field.storage.taxonomy_term.field_heading.yml
+++ b/config/sync/field.storage.taxonomy_term.field_heading.yml
@@ -1,14 +1,17 @@
-uuid: 699f692a-c62a-4603-aab9-b28de71ad6f8
+uuid: 7f404580-8359-4ab7-97f4-6e3538e0fb6d
 langcode: da
 status: true
 dependencies:
   module:
     - taxonomy
-id: taxonomy_term.field_vih_show_on_frontpage
-field_name: field_vih_show_on_frontpage
+id: taxonomy_term.field_heading
+field_name: field_heading
 entity_type: taxonomy_term
-type: boolean
-settings: {  }
+type: string
+settings:
+  max_length: 255
+  is_ascii: false
+  case_sensitive: false
 module: core
 locked: false
 cardinality: 1
