Class and class packages

--- a/config/sync/core.entity_form_display.taxonomy_term.vih_class_package.default.yml
+++ b/config/sync/core.entity_form_display.taxonomy_term.vih_class_package.default.yml
@@ -4,19 +4,89 @@ status: true
 dependencies:
   config:
     - entity_browser.browser.image_browser
+    - field.field.taxonomy_term.vih_class_package.field_banner
+    - field.field.taxonomy_term.vih_class_package.field_heading
     - field.field.taxonomy_term.vih_class_package.field_link_taxo
     - field.field.taxonomy_term.vih_class_package.field_paragraphs
+    - field.field.taxonomy_term.vih_class_package.field_subheading
     - field.field.taxonomy_term.vih_class_package.field_vih_class_package_color
-    - field.field.taxonomy_term.vih_class_package.field_vih_cp_description
     - field.field.taxonomy_term.vih_class_package.field_vih_cp_image
-    - field.field.taxonomy_term.vih_class_package.field_vih_cp_subtitle
     - taxonomy.vocabulary.vih_class_package
   module:
     - entity_browser
+    - field_group
     - link
     - paragraphs
     - path
     - text
+third_party_settings:
+  field_group:
+    group_class_package_details:
+      children:
+        - name
+        - field_link_taxo
+        - field_vih_cp_image
+        - field_vih_cp_subtitle
+        - field_vih_class_package_color
+        - field_vih_cp_description
+      parent_name: ''
+      weight: 3
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        formatter: open
+        description: ''
+        required_fields: true
+      label: 'Fagpakke detaljer'
+      region: content
+    group_misc:
+      children:
+        - langcode
+        - path
+        - translation
+      parent_name: ''
+      weight: 4
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        formatter: closed
+        description: ''
+        required_fields: true
+      label: Andet
+      region: content
+    group_banner:
+      children:
+        - field_banner
+      parent_name: ''
+      weight: 0
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        formatter: closed
+        description: ''
+        required_fields: true
+      label: Banner
+      region: content
+    group_content:
+      children:
+        - field_heading
+        - field_subheading
+        - description
+        - field_paragraphs
+      parent_name: ''
+      weight: 2
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        formatter: open
+        description: ''
+        required_fields: true
+      label: Indhold
+      region: content
 id: taxonomy_term.vih_class_package.default
 targetEntityType: taxonomy_term
 bundle: vih_class_package
@@ -24,14 +94,35 @@ mode: default
 content:
   description:
     type: text_textarea
-    weight: 1
+    weight: 12
     settings:
       placeholder: ''
       rows: 5
     third_party_settings: {  }
     region: content
+  field_banner:
+    type: entity_browser_file
+    weight: 14
+    settings:
+      entity_browser: image_browser
+      field_widget_edit: true
+      field_widget_remove: true
+      view_mode: default
+      preview_image_style: thumbnail
+      open: true
+      selection_mode: selection_append
+    region: content
+    third_party_settings: {  }
+  field_heading:
+    weight: 10
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
   field_link_taxo:
-    weight: 2
+    weight: 14
     settings:
       placeholder_url: ''
       placeholder_title: ''
@@ -39,7 +130,7 @@ content:
     type: link_default
     region: content
   field_paragraphs:
-    weight: 11
+    weight: 13
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -52,23 +143,23 @@ content:
     third_party_settings: {  }
     type: paragraphs
     region: content
+  field_subheading:
+    weight: 11
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
   field_vih_class_package_color:
-    weight: 9
+    weight: 17
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
-  field_vih_cp_description:
-    weight: 6
-    settings:
-      rows: 5
-      placeholder: ''
-    third_party_settings: {  }
-    type: text_textarea
-    region: content
   field_vih_cp_image:
     type: entity_browser_file
-    weight: 7
+    weight: 15
     settings:
       entity_browser: image_browser
       field_widget_edit: true
@@ -79,24 +170,16 @@ content:
       selection_mode: selection_append
     third_party_settings: {  }
     region: content
-  field_vih_cp_subtitle:
-    weight: 5
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: string_textfield
-    region: content
   langcode:
     type: language_select
-    weight: 3
+    weight: 4
     settings:
       include_locked: true
     third_party_settings: {  }
     region: content
   name:
     type: string_textfield
-    weight: 0
+    weight: 13
     settings:
       size: 60
       placeholder: ''
@@ -104,12 +187,12 @@ content:
     region: content
   path:
     type: path
-    weight: 4
+    weight: 5
     settings: {  }
     third_party_settings: {  }
     region: content
   translation:
-    weight: 10
+    weight: 6
     region: content
     settings: {  }
     third_party_settings: {  }
