--- a/config/sync/core.entity_view_display.taxonomy_term.vih_class_package.teaser.yml
+++ b/config/sync/core.entity_view_display.taxonomy_term.vih_class_package.teaser.yml
@@ -4,12 +4,13 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.taxonomy_term.teaser
+    - field.field.taxonomy_term.vih_class_package.field_banner
+    - field.field.taxonomy_term.vih_class_package.field_heading
     - field.field.taxonomy_term.vih_class_package.field_link_taxo
     - field.field.taxonomy_term.vih_class_package.field_paragraphs
+    - field.field.taxonomy_term.vih_class_package.field_subheading
     - field.field.taxonomy_term.vih_class_package.field_vih_class_package_color
-    - field.field.taxonomy_term.vih_class_package.field_vih_cp_description
     - field.field.taxonomy_term.vih_class_package.field_vih_cp_image
-    - field.field.taxonomy_term.vih_class_package.field_vih_cp_subtitle
     - image.style.class_packages_frontpage
     - taxonomy.vocabulary.vih_class_package
   module:
@@ -27,6 +28,14 @@ targetEntityType: taxonomy_term
 bundle: vih_class_package
 mode: teaser
 content:
+  field_subheading:
+    type: string
+    weight: 0
+    region: content
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
   field_vih_class_package_color:
     type: list_key
     weight: 2
@@ -36,24 +45,17 @@ content:
     third_party_settings: {  }
   field_vih_cp_image:
     type: image
-    weight: 0
+    weight: 1
     region: content
     label: hidden
     settings:
       image_style: class_packages_frontpage
       image_link: ''
     third_party_settings: {  }
-  field_vih_cp_subtitle:
-    type: string
-    weight: 1
-    region: content
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
 hidden:
   description: true
+  field_banner: true
+  field_heading: true
   field_link_taxo: true
   field_paragraphs: true
-  field_vih_cp_description: true
   langcode: true
