--- a/config/sync/core.entity_view_display.taxonomy_term.vih_class_package.vih_class_package_accordion.yml
+++ b/config/sync/core.entity_view_display.taxonomy_term.vih_class_package.vih_class_package_accordion.yml
@@ -4,12 +4,13 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.taxonomy_term.vih_class_package_accordion
+    - field.field.taxonomy_term.vih_class_package.field_banner
+    - field.field.taxonomy_term.vih_class_package.field_heading
     - field.field.taxonomy_term.vih_class_package.field_link_taxo
     - field.field.taxonomy_term.vih_class_package.field_paragraphs
+    - field.field.taxonomy_term.vih_class_package.field_subheading
     - field.field.taxonomy_term.vih_class_package.field_vih_class_package_color
-    - field.field.taxonomy_term.vih_class_package.field_vih_cp_description
     - field.field.taxonomy_term.vih_class_package.field_vih_cp_image
-    - field.field.taxonomy_term.vih_class_package.field_vih_cp_subtitle
     - image.style.vih_class_package_accordion
     - taxonomy.vocabulary.vih_class_package
   module:
@@ -38,9 +39,10 @@ content:
     third_party_settings: {  }
     region: content
 hidden:
+  field_banner: true
+  field_heading: true
   field_link_taxo: true
   field_paragraphs: true
+  field_subheading: true
   field_vih_class_package_color: true
-  field_vih_cp_description: true
-  field_vih_cp_subtitle: true
   langcode: true
