--- a/config/sync/field.field.taxonomy_term.vih_class_package.field_heading.yml
+++ b/config/sync/field.field.taxonomy_term.vih_class_package.field_heading.yml
@@ -1,15 +1,15 @@
-uuid: 974c0a15-f593-4ab8-9621-05de88c24304
-langcode: en
+uuid: 263f3f3e-2aab-4ae9-9b4d-1c92bf19d12a
+langcode: da
 status: true
 dependencies:
   config:
-    - field.storage.taxonomy_term.field_vih_cp_subtitle
+    - field.storage.taxonomy_term.field_heading
     - taxonomy.vocabulary.vih_class_package
-id: taxonomy_term.vih_class_package.field_vih_cp_subtitle
-field_name: field_vih_cp_subtitle
+id: taxonomy_term.vih_class_package.field_heading
+field_name: field_heading
 entity_type: taxonomy_term
 bundle: vih_class_package
-label: Subtitle
+label: Heading
 description: ''
 required: false
 translatable: true
