--- a/config/sync/core.entity_view_display.taxonomy_term.vih_class_package.default.yml
+++ b/config/sync/core.entity_view_display.taxonomy_term.vih_class_package.default.yml
@@ -17,6 +17,7 @@ dependencies:
     - image
     - link
     - panelizer
+    - text
 third_party_settings:
   panelizer:
     enable: false
@@ -28,8 +29,15 @@ targetEntityType: taxonomy_term
 bundle: vih_class_package
 mode: default
 content:
+  description:
+    type: text_default
+    weight: 3
+    region: content
+    label: hidden
+    settings: {  }
+    third_party_settings: {  }
   field_banner:
-    weight: -1
+    weight: 0
     label: hidden
     settings:
       image_style: banner_small
@@ -38,7 +46,7 @@ content:
     type: image
     region: content
   field_heading:
-    weight: 0
+    weight: 1
     label: hidden
     settings:
       link_to_entity: false
@@ -46,7 +54,7 @@ content:
     type: string
     region: content
   field_link_taxo:
-    weight: -3
+    weight: 4
     label: hidden
     settings:
       trim_length: 80
@@ -58,7 +66,7 @@ content:
     type: link
     region: content
   field_paragraphs:
-    weight: -2
+    weight: 5
     label: hidden
     settings:
       view_mode: default
@@ -67,7 +75,7 @@ content:
     type: entity_reference_revisions_entity_view
     region: content
   field_subheading:
-    weight: 1
+    weight: 2
     label: hidden
     settings:
       link_to_entity: false
@@ -75,7 +83,6 @@ content:
     type: string
     region: content
 hidden:
-  description: true
   field_vih_class_package_color: true
   field_vih_cp_image: true
   langcode: true
