--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -13,6 +13,7 @@ module:
   contact_block: 0
   contact_storage: 0
   contextual: 0
+  crop: 0
   ctools: 0
   ctools_block: 0
   datetime: 0
@@ -37,6 +38,7 @@ module:
   help: 0
   history: 0
   image: 0
+  image_widget_crop: 0
   inline_entity_form: 0
   kint: 0
   language: 0
