Setting the proper config directory

--- a/.travis.yml
+++ b/.travis.yml
@@ -53,6 +53,9 @@ install:
   - cd docroot
   - drush --verbose site-install lightning --yes --account-pass=admin --db-url=mysql://root:@localhost/drupal
   
+  # Set proper config directory settings.php
+  - echo '$config_directories["sync"] = "../config/sync";' >> sites/default/settings.php;
+  
   # Import config for our install.
   - drush cset system.site uuid 33168afd-6fef-4cad-8a71-1d93a63835ca --yes
   - drush --verbose config-import active --yes
