--- a/config/sync/core.entity_form_display.node.news.default.yml
+++ b/config/sync/core.entity_form_display.node.news.default.yml
@@ -62,7 +62,6 @@ third_party_settings:
         - promote
         - sticky
         - path
-        - status
         - scheduled_update
       parent_name: ''
       weight: 2
@@ -177,13 +176,6 @@ content:
     third_party_settings: {  }
     type: inline_entity_form_complex
     region: content
-  status:
-    type: boolean_checkbox
-    settings:
-      display_label: true
-    weight: 10
-    third_party_settings: {  }
-    region: content
   sticky:
     type: boolean_checkbox
     settings:
@@ -213,4 +205,5 @@ content:
       placeholder: ''
     third_party_settings: {  }
     region: content
-hidden: {  }
+hidden:
+  status: true
