--- a/config/sync/core.entity_form_display.node.vih_short_course.default.yml
+++ b/config/sync/core.entity_form_display.node.vih_short_course.default.yml
@@ -72,7 +72,6 @@ third_party_settings:
         - sticky
         - path
         - scheduled_update
-        - status
       parent_name: ''
       weight: 3
       format_type: tab
@@ -269,13 +268,6 @@ content:
     third_party_settings: {  }
     type: inline_entity_form_complex
     region: content
-  status:
-    type: boolean_checkbox
-    settings:
-      display_label: true
-    weight: 12
-    third_party_settings: {  }
-    region: content
   sticky:
     type: boolean_checkbox
     settings:
@@ -305,4 +297,5 @@ content:
       placeholder: ''
     third_party_settings: {  }
     region: content
-hidden: {  }
+hidden:
+  status: true
