--- a/config/sync/core.entity_form_display.node.vih_course_period.default.yml
+++ b/config/sync/core.entity_form_display.node.vih_course_period.default.yml
@@ -23,7 +23,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 31
+    weight: 7
     settings:
       rows: 9
       summary_rows: 3
@@ -32,13 +32,13 @@ content:
     region: content
   created:
     type: datetime_timestamp
-    weight: 10
+    weight: 3
     settings: {  }
     third_party_settings: {  }
     region: content
   field_vih_cp_course_slots:
     type: entity_reference_paragraphs
-    weight: 35
+    weight: 10
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -49,27 +49,27 @@ content:
     third_party_settings: {  }
     region: content
   field_vih_cp_end_date:
-    weight: 34
+    weight: 9
     settings: {  }
     third_party_settings: {  }
     type: datetime_default
     region: content
   field_vih_cp_start_date:
-    weight: 32
+    weight: 8
     settings: {  }
     third_party_settings: {  }
     type: datetime_default
     region: content
   langcode:
     type: language_select
-    weight: 2
+    weight: 1
     settings:
       include_locked: true
     third_party_settings: {  }
     region: content
   path:
     type: path
-    weight: 30
+    weight: 6
     settings: {  }
     third_party_settings: {  }
     region: content
@@ -77,11 +77,11 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 15
+    weight: 4
     third_party_settings: {  }
     region: content
   scheduled_update:
-    weight: 122
+    weight: 11
     settings:
       match_operator: CONTAINS
       form_mode: default
@@ -93,23 +93,16 @@ content:
     third_party_settings: {  }
     type: inline_entity_form_complex
     region: content
-  status:
-    type: boolean_checkbox
-    settings:
-      display_label: true
-    weight: 121
-    third_party_settings: {  }
-    region: content
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 16
+    weight: 5
     third_party_settings: {  }
     region: content
   title:
     type: string_textfield
-    weight: -5
+    weight: 0
     settings:
       size: 60
       placeholder: ''
@@ -117,11 +110,12 @@ content:
     region: content
   uid:
     type: entity_reference_autocomplete
-    weight: 5
+    weight: 2
     settings:
       match_operator: CONTAINS
       size: 60
       placeholder: ''
     third_party_settings: {  }
     region: content
-hidden: {  }
+hidden:
+  status: true
