--- a/config/sync/core.entity_form_display.node.vih_event_order.default.yml
+++ b/config/sync/core.entity_form_display.node.vih_event_order.default.yml
@@ -19,7 +19,7 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 10
+    weight: 3
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -36,7 +36,7 @@ content:
     type: 'plugin_selector:plugin_select_list'
     region: content
   field_vih_eo_event:
-    weight: 31
+    weight: 7
     settings:
       match_operator: CONTAINS
       size: 60
@@ -46,7 +46,7 @@ content:
     region: content
   field_vih_eo_persons:
     type: entity_reference_paragraphs
-    weight: 32
+    weight: 8
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -57,28 +57,28 @@ content:
     third_party_settings: {  }
     region: content
   field_vih_eo_price:
-    weight: 36
+    weight: 9
     settings:
       placeholder: ''
     third_party_settings: {  }
     type: number
     region: content
   field_vih_eo_status:
-    weight: 37
+    weight: 10
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   langcode:
     type: language_select
-    weight: 2
+    weight: 1
     region: content
     settings:
       include_locked: true
     third_party_settings: {  }
   path:
     type: path
-    weight: 30
+    weight: 6
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -86,26 +86,19 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 15
+    weight: 4
     region: content
     third_party_settings: {  }
-  status:
-    type: boolean_checkbox
-    settings:
-      display_label: true
-    weight: 121
-    third_party_settings: {  }
-    region: content
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 16
+    weight: 5
     region: content
     third_party_settings: {  }
   title:
     type: string_textfield
-    weight: -5
+    weight: 0
     region: content
     settings:
       size: 60
@@ -113,11 +106,12 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 5
+    weight: 2
     settings:
       match_operator: CONTAINS
       size: 60
       placeholder: ''
     region: content
     third_party_settings: {  }
-hidden: {  }
+hidden:
+  status: true
