--- a/config/sync/core.entity_form_display.node.vih_long_course_order.default.yml
+++ b/config/sync/core.entity_form_display.node.vih_long_course_order.default.yml
@@ -42,7 +42,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 31
+    weight: 7
     settings:
       rows: 9
       summary_rows: 3
@@ -51,12 +51,12 @@ content:
     region: content
   created:
     type: datetime_timestamp
-    weight: 10
+    weight: 3
     settings: {  }
     third_party_settings: {  }
     region: content
   field_vih_lco_address:
-    weight: 39
+    weight: 15
     settings:
       size: 60
       placeholder: ''
@@ -64,7 +64,7 @@ content:
     type: string_textfield
     region: content
   field_vih_lco_adult_address:
-    weight: 52
+    weight: 28
     settings:
       size: 60
       placeholder: ''
@@ -72,7 +72,7 @@ content:
     type: string_textfield
     region: content
   field_vih_lco_adult_city:
-    weight: 53
+    weight: 29
     settings:
       size: 60
       placeholder: ''
@@ -80,7 +80,7 @@ content:
     type: string_textfield
     region: content
   field_vih_lco_adult_email:
-    weight: 51
+    weight: 27
     settings:
       size: 60
       placeholder: ''
@@ -88,7 +88,7 @@ content:
     type: string_textfield
     region: content
   field_vih_lco_adult_first_name:
-    weight: 48
+    weight: 24
     settings:
       size: 60
       placeholder: ''
@@ -96,7 +96,7 @@ content:
     type: string_textfield
     region: content
   field_vih_lco_adult_last_name:
-    weight: 49
+    weight: 25
     settings:
       size: 60
       placeholder: ''
@@ -104,7 +104,7 @@ content:
     type: string_textfield
     region: content
   field_vih_lco_adult_nationality:
-    weight: 55
+    weight: 31
     settings:
       size: 60
       placeholder: ''
@@ -112,7 +112,7 @@ content:
     type: string_textfield
     region: content
   field_vih_lco_adult_telefon:
-    weight: 50
+    weight: 26
     settings:
       size: 60
       placeholder: ''
@@ -120,7 +120,7 @@ content:
     type: string_textfield
     region: content
   field_vih_lco_adult_zip:
-    weight: 54
+    weight: 30
     settings:
       size: 60
       placeholder: ''
@@ -128,7 +128,7 @@ content:
     type: string_textfield
     region: content
   field_vih_lco_city:
-    weight: 40
+    weight: 16
     settings:
       size: 60
       placeholder: ''
@@ -136,7 +136,7 @@ content:
     type: string_textfield
     region: content
   field_vih_lco_course:
-    weight: 32
+    weight: 8
     settings:
       match_operator: CONTAINS
       size: 60
@@ -145,7 +145,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_vih_lco_cpr:
-    weight: 36
+    weight: 12
     settings:
       size: 60
       placeholder: ''
@@ -153,7 +153,7 @@ content:
     type: string_textfield
     region: content
   field_vih_lco_education:
-    weight: 42
+    weight: 18
     settings:
       size: 60
       placeholder: ''
@@ -161,7 +161,7 @@ content:
     type: string_textfield
     region: content
   field_vih_lco_email:
-    weight: 46
+    weight: 22
     settings:
       size: 60
       placeholder: ''
@@ -169,7 +169,7 @@ content:
     type: string_textfield
     region: content
   field_vih_lco_first_name:
-    weight: 34
+    weight: 10
     settings:
       size: 60
       placeholder: ''
@@ -177,7 +177,7 @@ content:
     type: string_textfield
     region: content
   field_vih_lco_found_from:
-    weight: 44
+    weight: 20
     settings:
       size: 60
       placeholder: ''
@@ -185,7 +185,7 @@ content:
     type: string_textfield
     region: content
   field_vih_lco_last_name:
-    weight: 35
+    weight: 11
     settings:
       size: 60
       placeholder: ''
@@ -193,7 +193,7 @@ content:
     type: string_textfield
     region: content
   field_vih_lco_message:
-    weight: 45
+    weight: 21
     settings:
       rows: 5
       placeholder: ''
@@ -201,7 +201,7 @@ content:
     type: string_textarea
     region: content
   field_vih_lco_nationality:
-    weight: 38
+    weight: 14
     settings:
       size: 60
       placeholder: ''
@@ -209,7 +209,7 @@ content:
     type: string_textfield
     region: content
   field_vih_lco_newsletter:
-    weight: 47
+    weight: 23
     settings:
       display_label: true
     third_party_settings: {  }
@@ -217,7 +217,7 @@ content:
     region: content
   field_vih_lco_order_course_perio:
     type: entity_reference_paragraphs
-    weight: 33
+    weight: 9
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -228,7 +228,7 @@ content:
     third_party_settings: {  }
     region: content
   field_vih_lco_payment:
-    weight: 43
+    weight: 19
     settings:
       size: 60
       placeholder: ''
@@ -236,13 +236,13 @@ content:
     type: string_textfield
     region: content
   field_vih_lco_status:
-    weight: 121
+    weight: 32
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_vih_lco_telefon:
-    weight: 37
+    weight: 13
     settings:
       size: 60
       placeholder: ''
@@ -250,7 +250,7 @@ content:
     type: string_textfield
     region: content
   field_vih_lco_zip:
-    weight: 41
+    weight: 17
     settings:
       size: 60
       placeholder: ''
@@ -259,14 +259,14 @@ content:
     region: content
   langcode:
     type: language_select
-    weight: 2
+    weight: 1
     settings:
       include_locked: true
     third_party_settings: {  }
     region: content
   path:
     type: path
-    weight: 30
+    weight: 6
     settings: {  }
     third_party_settings: {  }
     region: content
@@ -274,26 +274,19 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 15
-    third_party_settings: {  }
-    region: content
-  status:
-    type: boolean_checkbox
-    settings:
-      display_label: true
-    weight: 122
+    weight: 4
     third_party_settings: {  }
     region: content
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 16
+    weight: 5
     third_party_settings: {  }
     region: content
   title:
     type: string_textfield
-    weight: -5
+    weight: 0
     settings:
       size: 60
       placeholder: ''
@@ -301,11 +294,12 @@ content:
     region: content
   uid:
     type: entity_reference_autocomplete
-    weight: 5
+    weight: 2
     settings:
       match_operator: CONTAINS
       size: 60
       placeholder: ''
     third_party_settings: {  }
     region: content
-hidden: {  }
+hidden:
+  status: true
