--- a/config/sync/core.entity_form_display.node.vih_short_course_order.default.yml
+++ b/config/sync/core.entity_form_display.node.vih_short_course_order.default.yml
@@ -22,7 +22,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 31
+    weight: 7
     settings:
       rows: 9
       summary_rows: 3
@@ -31,12 +31,12 @@ content:
     region: content
   created:
     type: datetime_timestamp
-    weight: 10
+    weight: 3
     settings: {  }
     third_party_settings: {  }
     region: content
   field_vih_sco_course:
-    weight: 33
+    weight: 9
     settings:
       match_operator: CONTAINS
       size: 60
@@ -46,7 +46,7 @@ content:
     region: content
   field_vih_sco_ordered_options:
     type: entity_reference_paragraphs
-    weight: 32
+    weight: 8
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -58,7 +58,7 @@ content:
     region: content
   field_vih_sco_persons:
     type: entity_reference_paragraphs
-    weight: 34
+    weight: 10
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -69,28 +69,28 @@ content:
     third_party_settings: {  }
     region: content
   field_vih_sco_price:
-    weight: 35
+    weight: 11
     settings:
       placeholder: ''
     third_party_settings: {  }
     type: number
     region: content
   field_vih_sco_status:
-    weight: 36
+    weight: 12
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   langcode:
     type: language_select
-    weight: 2
+    weight: 1
     settings:
       include_locked: true
     third_party_settings: {  }
     region: content
   path:
     type: path
-    weight: 30
+    weight: 6
     settings: {  }
     third_party_settings: {  }
     region: content
@@ -98,26 +98,19 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 15
-    third_party_settings: {  }
-    region: content
-  status:
-    type: boolean_checkbox
-    settings:
-      display_label: true
-    weight: 121
+    weight: 4
     third_party_settings: {  }
     region: content
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 16
+    weight: 5
     third_party_settings: {  }
     region: content
   title:
     type: string_textfield
-    weight: -5
+    weight: 0
     settings:
       size: 60
       placeholder: ''
@@ -125,11 +118,12 @@ content:
     region: content
   uid:
     type: entity_reference_autocomplete
-    weight: 5
+    weight: 2
     settings:
       match_operator: CONTAINS
       size: 60
       placeholder: ''
     third_party_settings: {  }
     region: content
-hidden: {  }
+hidden:
+  status: true
